[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
examples = {path = "../programs/examples"}
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
vaults = {git = "https://github.com/sol-farm/tulipv2-sdk.git", rev = "cca1daa7d98bd661dc9d398dc72bb9dcf3208c66"}
common = {git = "https://github.com/sol-farm/tulipv2-sdk.git", rev = "cca1daa7d98bd661dc9d398dc72bb9dcf3208c66"}