[package]
name = "examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "examples"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
vaults = {git = "https://github.com/sol-farm/tulipv2-sdk.git", rev = "1830d4afa41e1aab638a93b8ac67ae348c424e6a"}
common = {git = "https://github.com/sol-farm/tulipv2-sdk.git", rev = "1830d4afa41e1aab638a93b8ac67ae348c424e6a"}
spl-associated-token-account = "1.0.3"
