[package]
name = "examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "examples"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
vaults = {git = "https://github.com/sol-farm/tulipv2-sdk.git", rev = "cca1daa7d98bd661dc9d398dc72bb9dcf3208c66"}
common = {git = "https://github.com/sol-farm/tulipv2-sdk.git", rev = "cca1daa7d98bd661dc9d398dc72bb9dcf3208c66"}
spl-associated-token-account = "1.0.3"
