[package]
name = "examples"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "examples"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
tulipv2-sdk-vaults = "0.9.0"
tulipv2-sdk-common = "0.9.0"
spl-associated-token-account = "1.0.3"
